test/algeff/shallow1.kk.out
test/algeff/shallow1.kk(21, 3): error: identifier .makeShallowHandler0 is undefined